--- a/clases.html
+++ b/clases.html
@@ -3,6 +3,9 @@
 </head>
 <body>
 	<div id="header">
+		<div id="logo">
+			<img src="images/logo.png">
+		</div>
 		<div id="title">
 			<h1>SISTEMAS WEB</h1>
 		</div> 
@@ -15,13 +18,33 @@
 	</div>
 	<div id="container">
 		<div id="images">
-			<img src="images/css.png" height="200px" width="200px">
-			<img src="images/html.png" height="200px" width="200px">
-			<img src="images/js.png" height="200px" width="200px">
-
+			<div class="clase">
+				<img src="images/css.png">
+				<h3>Aprende CSS</h3>
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				tempor incididunt ut labore et dolore magna aliqua.
+			</div>
+			<div class="clase">
+				<img src="images/html.png">
+				<h3>Aprende HTML</h3>
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				tempor incididunt ut labore et dolore magna aliqua.
+			</div>
+			<div class="clase">
+				<img src="images/js.png">
+				<h3>Aprende JS</h3>
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				tempor incididunt ut labore et dolore magna aliqua.
+			</div>
+			<div class="clase">
+				<img src="images/php.jpeg">
+				<h3>Aprende PHP</h3>
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				tempor incididunt ut labore et dolore magna aliqua.
+			</div>
 		</div>
 	</div>
-
+	<div class="clear"></div>
 	<div id="footer">
 		<h3>@Sistemas Web</h3>
 		<div id="links_footer">
