--- a/registro.html
+++ b/registro.html
@@ -2,7 +2,15 @@
 	<link rel="stylesheet" type="text/css" href="app.css">
 </head>
 <body>
+
+	<div id="publicidad">
+		<img src="images/publicidad.jpg">
+	</div>
+
 	<div id="header">
+		<div id="logo">
+			<img src="images/logo.png">
+		</div>
 		<div id="title">
 			<h1>SISTEMAS WEB</h1>
 		</div> 
@@ -39,7 +47,16 @@
 			</select> 
 			<h3>Comentarios</h3>
 			<input type="text" name="firstname"><br/>
-
+			<h3>Sexo</h3>
+			<input type="radio" name="sexo" value="m" checked>Masculino
+			<br/>
+			<input type="radio" name="sexo" value="f">Femenino
+			<br/>
+			<h3>Color de Porlera</h3>
+			<input type="color" name="col_pol">
+			<h3>Fecha de nacimiento</h3>
+			 <input type="date" name="nac"><br/>
+			
 			<input id="button" type="submit" value="REGISTRARSE">
 		</form>
 
