--- a/precio.html
+++ b/precio.html
@@ -3,6 +3,9 @@
 </head>
 <body>
 	<div id="header">
+		<div id="logo">
+			<img src="images/logo.png">
+		</div>
 		<div id="title">
 			<h1>SISTEMAS WEB</h1>
 		</div> 
